2013-04-05  Ingo Renner  <ingo@typo3.org>

	* Fixed bug #46180: Overrule language labels from TS
	* Fixed bug #41521: pages-TCA not fully loaded in SOLR_RELATION
	* Fixed bug #46966: Autocomplete not working under TYPO3 6.1

2013-04-02  Olivier Dobberkau <olivier.dobberkau@dkd.de>

	* Fix a wrong URL in the multi solr install script

2013-02-16  Kai Vogel <kai.vogel@speedprogs.de>

	* Fixed issue #45440: Broken facet options when with queryGroup and "}" in query

2013-02-16  Lienhart Woitok <lienhart.woitok@netlogix.de>

	* Added feature #45195: Option to remove empty values from SOLR_RELATION
	* Added feature #45196: Option to remove duplicate values from SOLR_RELATION
	* Added feature #45197: Option to remove duplicate values from SOLR_MULTIVALUE
	* Added feature #45198: Specify foreignLabelField in SOLR_RELATION for deeper relations
	* Added feature #45199: Allow to post process the plugin output with stdWrap
	* Added feature #45200: Make facet count and name available in rendering instructions
	* Fixed issue #45201: Result highlighting only works for content
	* Fixed issue #45202: Workspace version swap does not take additionalWhereClause into account
	* Fixed issue #45203: Remove empty tx_solr[q] parameter from URLs
	* Added feature #45204: Allow selectingSelectedFacetOptionRemovesFilter and singleOptionMode to work together
	* Added feature #45206: Did you mean should only display suggestions that actually yield results
	* Added feature #45207: Add timestamps to included javascript files
	* Fixed issue #45208: Ensure additionalWhereClause is respected when indexing
	* Fixed issue #45209: SOLR_RELATION does not apply enableFields for MM relations

2013-02-04  Marc Bastian Heinrichs <typo3@mbh-software.de>

	* Fixed bug #44984: For global vars the $GLOBALS array needs to be used since 6.0

2013-02-04  Ingo Renner  <ingo@typo3.org>

	* Fixed bug #44166: Updating tt_content record does not re-index page